--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,10 +12,30 @@ server {
 }
 
 app {
-  name = "tic-tac-toe"
+  name = tic-tac-toe
   version = 0.2
+  public-url = "http://localhost:8080"
 }
 
 docs {
-  file = "tic-tac-toe-swagger.yaml"
+  file = tic-tac-toe-swagger.yaml
 }
+
+mail {
+  server {
+    username = ""
+    password = ""
+    smtp {
+      port = 1025
+      host = localhost
+    }
+  }
+  no-reply-address = "no-reply@tictactoe.pl"
+}
+
+
+registration {
+  confirmation-redirect = "http://localhost:8080"
+}
+
+
