Added resetting of password.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,7 +14,7 @@ server {
 app {
   name = tic-tac-toe
   version = 0.2
-  public-url = "http://localhost:8080"
+  public-url = "http://tictactoe.pl"
 }
 
 docs {
@@ -35,7 +35,7 @@ mail {
 
 
 registration {
-  confirmation-redirect = "http://localhost:8080"
+  confirmation-redirect = ${app.public-url}"/registration/thank-you"
 }
 
 
