Added README and docker-compose.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 db {
-  database-url = "postgres://tictactoe_user:tictactoe@localhost:5432/tictactoe"
+  database-url = "postgres://tictactoe_user:tictactoe@localhost:6432/tictactoe"
   database-url = ${?DATABASE_URL}
   driver = org.postgresql.Driver
 }
@@ -14,7 +14,7 @@ server {
 app {
   name = tic-tac-toe
   version = 0.2
-  public-url = "http://tictactoe.pl"
+  public-url = "http://tictactoe.io"
 }
 
 docs {
@@ -30,7 +30,7 @@ mail {
       host = localhost
     }
   }
-  no-reply-address = "no-reply@tictactoe.pl"
+  no-reply-address = "no-reply@tictactoe.io"
 }
 
 
