Added invitation endpoint. Refactoring of TemplateData to be more type-safe.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,10 @@ http {
       return 200 'Thank you!';
     }
 
+    location = /login {
+      return 200 "Hello!"
+    }
+
     location = /newpassword {
       return 200 'Changing password?';
     }
