Added invitations for games.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,8 +15,8 @@ http {
       return 200 'Thank you!';
     }
 
-    location = /login {
-      return 200 "Hello!"
+    location = /start {
+      return 200 "Hello!";
     }
 
     location = /newpassword {
